# minipro-gui

./: .gitignore  CMakeLists.txt  README.md  minipro-gui.qrc
.github/workflows/: build.yaml  cmake.yaml  macos.yaml  sonarcloud.yml  tests.yaml  ubuntu.yaml
res/: AppIcon.icns
src/: Devices.cpp  Devices.h  Firmware.cpp  Firmware.h  HexView.cpp  HexView.h  MainWindow.cpp  MainWindow.h  Programmers.cpp  Programmers.h  Read.cpp  Read.h  Write.cpp  Write.h  main.cpp
tests/: CMakeLists.txt  MainWindowTest.cpp  run_tests.sh
